@@ -1,5 +1,7 @@
 = HEAD
 
+* Allow error handler access to the request's remaining_path (jeremyevans)
+
 * Add optimized_string_matchers plugin, containing optimized matchers for single string arguments (jeremyevans)
 
 * Optimize string matching code for strings without placeholders for up to a 60% performance increase (jeremyevans)
